LU-8420 tests: yet another test for bulk transfer timeout

test to illustrate client eviction after bulk transfer timeout

Signed-off-by: Vladimir Saveliev <vladimir.saveliev@seagate.com>
Seagate-bug-id: MRP-3582
Change-Id: I79988c8e82967d8eef077f42cd6331999294ea50